# cicadas

./: .eslintignore  .eslintrc.json  README.md  package.json  uno.config.ts  vite.config.ts
.github/workflows/: nightly.yml  release.yml
locales/: en.json  index.ts  zh-cn.json
src/: App.tsx  global.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  LICENSE  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  cache_manager.rs  error.rs  lib.rs  local_scanner.rs  main.rs  media_control.rs
src/components/: album-item.tsx  artist-item.tsx  locale-provider.tsx  lyrics.tsx  navigation.tsx  now-playing.tsx  playlist-tooltip.tsx  song-item.tsx  songlist-item.tsx  title-bar.tsx
src/components/base/: badge.tsx  button-group.tsx  button.tsx  card.tsx  checkbox.tsx  dropdown.tsx  input.tsx  loading-dots.tsx  modal.tsx  no-ssr.tsx  pagination.tsx  parallex.tsx  portal.tsx  progress.tsx  radio.tsx  scrollable.tsx  select.tsx  slider.tsx  spinner.tsx  switch.tsx  table.tsx  textarea.tsx  tooltip.tsx
src/jotais/: library.ts  play.ts  playlist.ts  settings.ts  shared-store.ts  storage.ts
src/pages/: 404.tsx  album.tsx  artist.tsx  local.tsx  ncm.tsx  settings.tsx  song.tsx  songlist.tsx
src/storages/: local.ts  ncm.ts
src/utils/: cache..ts  cache.ts  chunk-transformer.ts  chunk-transformer.worker.ts  local-utitity.ts  lyric-parser.ts  merge-deep.ts  player.ts  sort.ts
