[package]
name = "cicadas"
version = "0.2.0"
description = "Cicadas"
authors = ["Simon Shiki"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cicadas_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde_json = "1.0"
tauri-plugin-fs = "2.0.3"
tauri-plugin-dialog = "2.0.3"
rodio = { git = "https://github.com/SimonShiki/rodio.git", rev = "4ef218d", features = ["symphonia-all"] }
souvlaki = "0.6"
walkdir = "2.5.0"
num_cpus = "1.16.0"
lofty = "0.21.0"
base64 = "0.22.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
futures = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
